@@ -18,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -35,10 +34,10 @@ public class PublicMetadataIndexServiceImpl implements PublicMetadataIndexServic
     }
     return null;
   }
-  private IndexCoordinates getPublicAdditionalMetadataIndexCoordinates() {
+  private IndexCoordinates getPublicExtendedMetadataIndexCoordinates() {
     BackendConfig metadataConfig = configService.getMetadataConfig();
-    if (metadataConfig != null && !StringUtils.isEmpty(metadataConfig.getAdditionalMetadataIndexName())) {
-      return IndexCoordinates.of(metadataConfig.getAdditionalMetadataIndexName());
+    if (metadataConfig != null && !StringUtils.isEmpty(metadataConfig.getExtendedMetadataIndexName())) {
+      return IndexCoordinates.of(metadataConfig.getExtendedMetadataIndexName());
     }
     return null;
   }
@@ -50,19 +49,19 @@ public class PublicMetadataIndexServiceImpl implements PublicMetadataIndexServic
     IndexCoordinates metadataIndexCoordinates = getPublicMetadataIndexCoordinates();
     if (metadataIndexCoordinates != null) {
       List<UpdateQuery> updates = backendMetadata.stream()
-        .map(m -> getUpdateQuery(m.getId(), m.getData())).filter(Objects::nonNull).collect(Collectors.toList());
+        .map(m -> getUpdateQuery(m.getId(), m.getData())).filter(Objects::nonNull).toList();
       if (!updates.isEmpty()) {
         elasticsearchOperations.bulkUpdate(updates, metadataIndexCoordinates);
         elasticsearchOperations.indexOps(metadataIndexCoordinates).refresh();
       }
     }
-    IndexCoordinates additionalMetadataIndexCoordinates = getPublicAdditionalMetadataIndexCoordinates();
-    if (additionalMetadataIndexCoordinates != null) {
+    IndexCoordinates extendedMetadataIndexCoordinates = getPublicExtendedMetadataIndexCoordinates();
+    if (extendedMetadataIndexCoordinates != null) {
       List<UpdateQuery> updatesInternal = backendMetadata.stream()
-        .map(m -> getUpdateQuery(m.getId(), m.getAdditionalData())).filter(Objects::nonNull).collect(Collectors.toList());
+        .map(m -> getUpdateQuery(m.getId(), m.getExtendedData())).filter(Objects::nonNull).toList();
       if (!updatesInternal.isEmpty()) {
-        elasticsearchOperations.bulkUpdate(updatesInternal, additionalMetadataIndexCoordinates);
-        elasticsearchOperations.indexOps(additionalMetadataIndexCoordinates).refresh();
+        elasticsearchOperations.bulkUpdate(updatesInternal, extendedMetadataIndexCoordinates);
+        elasticsearchOperations.indexOps(extendedMetadataIndexCoordinates).refresh();
       }
     }
   }
@@ -78,15 +77,15 @@ public class PublicMetadataIndexServiceImpl implements PublicMetadataIndexServic
   @Override
   public void deleteAll() {
     recreateIndex(getPublicMetadataIndexCoordinates());
-    recreateIndex(getPublicAdditionalMetadataIndexCoordinates());
+    recreateIndex(getPublicExtendedMetadataIndexCoordinates());
   }
 
   @Transactional
   @Override
   public void delete(List<BackendMetadata> backendMetadata) {
-    List<String> ids = backendMetadata.stream().map(BackendMetadata::getId).collect(Collectors.toList());
+    List<String> ids = backendMetadata.stream().map(BackendMetadata::getId).toList();
     delete(getPublicMetadataIndexCoordinates(), ids);
-    delete(getPublicAdditionalMetadataIndexCoordinates(), ids);
+    delete(getPublicExtendedMetadataIndexCoordinates(), ids);
   }
 
   private void delete(IndexCoordinates coordinates, List<String> ids) {
